{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player_Controller",
            "id": "af6648b0-af01-4f2e-93ba-8a21661ef097",
            "actions": [
                {
                    "name": "MovementV2",
                    "type": "Button",
                    "id": "8abf1c78-c4ba-426c-9b23-867d04fe8586",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5bd10c77-97a4-4a80-9b05-6591a5e9bb02",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "84ccfbfa-055e-4576-a7f3-bc70d50fe16e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e50a31b8-a51d-4ed5-a969-d983cb4f70a6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b6520a17-18d0-4794-9749-07b55bc21cc1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e4985cf8-b3a2-4a23-9bce-5348ca579916",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "57138013-f549-4c23-aa98-42db6b31d4fe",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementV2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera_Controller",
            "id": "5fcaab69-1ab7-4f73-b0f0-5163df945697",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "6419cbf9-3704-481f-bcdf-321ab5540352",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "b9e6b216-870b-48b2-8f41-b5cbc2ce24c3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52c75f2a-55e8-4281-8fb2-3b49cf41e28f",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2222decd-a8cb-455f-a19e-7fde8255657b",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee68fc9c-4a60-4ec7-8049-902fcee1fc89",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33b5a4ce-66a8-4258-96dd-8eb2eb69fcf7",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI_Controller",
            "id": "3740b162-c948-4fd4-83e6-7d4b7a4ba3d8",
            "actions": [
                {
                    "name": "InventoryOpen",
                    "type": "Button",
                    "id": "f61e9fce-ff8c-4c19-b5e7-625347e9fe30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac361179-2d9c-46e1-9043-3d9d0a0a0ecc",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}